
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct timespec {int tv_sec; } ;
typedef int sem_t ;


 int CLOCK_REALTIME ;
 scalar_t__ ETIMEDOUT ;
 int O_CREAT ;
 int O_RDWR ;
 int SEM_BLOCK_NAME ;
 int SEM_COUNT_NAME ;
 int * SEM_FAILED ;
 int clock_gettime (int ,struct timespec*) ;
 scalar_t__ errno ;
 int printf (char*,...) ;
 int sem_close (int *) ;
 scalar_t__ sem_getvalue (int *,int*) ;
 int * sem_open (int ,int,int,int ) ;
 scalar_t__ sem_post (int *) ;
 scalar_t__ sem_timedwait (int *,struct timespec*) ;
 int sem_unlink (int ) ;
 scalar_t__ wait_timeout ;

int sync_wait(int nproc)
{
    int flags;
    int value;
    sem_t *block;
    sem_t *count;
    struct timespec ts;

    if (nproc <= 1) {
        printf("sync_wait: number of processes should be larger than 1\n");
        return -1;
    }

    if (clock_gettime(CLOCK_REALTIME, &ts) == -1) {
        printf("clock_gettime error\n");
        return -1;
    }
    ts.tv_sec += wait_timeout;


    flags = O_RDWR | O_CREAT;
    block = sem_open(SEM_BLOCK_NAME, flags, 0644, 0);
    count = sem_open(SEM_COUNT_NAME, flags, 0644, 0);
    if (block == SEM_FAILED || count == SEM_FAILED) {
        printf("sync_wait: sem_open failed\n");
        return -1;
    }

    if (sem_post(count) < 0) {
        printf("sync_wait: sem_post failed\n");
        return -1;
    }
    if (sem_getvalue(count, &value) < 0) {
        printf("sync_wait: sem_getvalue failed\n");
        return -1;
    }
    printf("%d processes have arrived, waiting for the left %d\n", value, nproc-value);
    if (value >= nproc) {
        while (nproc-1 > 0) {
            if (sem_post(block) < 0) {
                printf("sync_wait: sem_post failed\n");
                return -1;
            }
            nproc--;
        }
    } else {
        if (sem_timedwait(block, &ts) < 0) {
            if (errno == ETIMEDOUT) {
                printf("sync_wait: sem_timewait time out\n");
            } else {
                printf("sync_wait: sem_timewait error\n");
            }
            return -1;
        }

    }

    sem_close(count);
    sem_close(block);

    sem_unlink(SEM_COUNT_NAME);
    sem_unlink(SEM_BLOCK_NAME);

    return 0;
}
